# ChangeLog for genkernel
# Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> x86/kernel-config-2.6:
  Added joystick support to the default configuration for bug #171911.

  14 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh,
  gen_initrd.sh, genkernel:
  Before we copy lvm.conf, we run it through 'lvm dumpconfig' to make sure the
  config is valid for bug #156009. This is 3.4.7_pre5.

  14 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> genkernel.conf:
  Change the default CACHE_DIR from /usr/share/genkernel/pkg/%%ARCH%% to
  /var/cache/genkernel/%%ARCH%% for bug #148253.

  13 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> alpha/modules_load,
  ia64/modules_load, um/modules_load, x86/modules_load, x86_64/modules_load,
  xen0/modules_load, xenU/modules_load:
  Added libata to the MODULES_SATA list. This might be why SATA CD drives
  weren't working for us.

  09 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_compile.sh,
  gen_determineargs.sh, gen_funcs.sh, gen_initramfs.sh, gen_initrd.sh,
  gen_package.sh, genkernel:
  Added a patch by John R. Graham <john_r_graham@mindspring.com> from bug
  #169383 to improve the --symlink option fairly significantly. This is going
  to be 3.4.7_pre4 and while I haven't tested this yet, it looks good.

  09 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh:
  Fixed lib64 link for bug #168664.

  09 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> x86/kernel-config-2.6:
  Update default kernel config with the current LiveCD config for 2007.0,
  which is built on 2.6.19, rather than 2.6.17 only.

  07 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  +pkg/module-init-tools-0.9.15-pre4.tar.bz2,
  +pkg/busybox-1.1.3+gentoo.tar.bz2,
  +pkg/devfsd-1.3.25-dietlibc-kernel25.tar.bz2,
  +pkg/modutils-2.4.26.tar.bz2:
  Added binary files back and updated busybox with a patch from Peter